# tg-berezka

./: .gitignore  main.py  pyproject.toml
src/: config.py  tg.py
