[tool.poetry]
name = "tg-berezka"
version = "0.1.0"
description = ""
authors = ["ChubAV <chub.aleksandr.v@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Telethon = "^1.25.2"
python-dotenv = "^0.21.0"
pika = "^1.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
