[tool.poetry]
name = "tg-berezka"
version = "0.1.0"
description = ""
authors = ["ChubAV <chub.aleksandr.v@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Telethon = "^1.25.2"
python-dotenv = "^0.21.0"
pika = "^1.3.0"
pytest = "^7.1.3"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
lxml = "^4.9.1"
selenium = "^4.5.0"
websockets = "^10.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
